# pelage

./: .gitignore  .nojekyll  .pre-commit-config.yaml  .release-template.md  LICENSE  Makefile  README.md  index.html  pyproject.toml  robots.txt  search.json  setup.py  sitemap.xml  tox.ini
.coverage/: .coverage  coverage.json  coverage.xml
.github/workflows/: publish.yml
docs/: .gitignore  _quarto.yml  _renderer.py  _sidebar.yml  index.html  index.ipynb  objects.json  search.json  shiny-docs.css
docs/_site/: search.json
docs/docs/: search.json
docs/notebooks/: coming_from_dbt.html  coming_from_dbt.qmd  examples.html  examples.ipynb  initial_readme.html  initial_readme.ipynb  initial_readme.md
docs/reference/: PolarsAssertError.html  PolarsAssertError.qmd  accepted_range.html  accepted_range.qmd  accepted_values.html  accepted_values.qmd  at_least_one.html  at_least_one.qmd  checks.html  column_is_within_n_std.html  column_is_within_n_std.qmd  custom_check.html  custom_check.qmd  has_columns.html  has_columns.qmd  has_dtypes.html  has_dtypes.qmd  has_mandatory_values.html  has_mandatory_values.qmd  has_no_infs.html  has_no_infs.qmd  has_no_nulls.html  has_no_nulls.qmd  has_shape.html  has_shape.qmd  index.html  index.qmd  index.qmd.html  is_monotonic.html  is_monotonic.qmd  maintains_relationships.html  maintains_relationships.qmd  mutually_exclusive_ranges.html  mutually_exclusive_ranges.qmd  not_accepted_values.html  not_accepted_values.qmd  not_constant.html  not_constant.qmd  not_null_proportion.html  not_null_proportion.qmd  (+4 more)
docs_quarto/: .gitignore  _quarto.yml  _sidebar.yml
furcoat/: __init__.py  checks.py
notebooks/: coming_from_dbt.html  examples.html  initial_readme.html  initial_readme.ipynb  initial_readme.md
pelage/: __init__.py  checks.py  types.py  utils.py
pelage/_checks/: accepted_range.py  accepted_values.py  at_least_one.py  column_is_within_n_std.py  custom_check.py  has_columns.py  has_dtypes.py  has_mandatory_values.py  has_no_infs.py  has_no_nulls.py  has_shape.py  is_monotonic.py  maintains_relationships.py  mutually_exclusive_ranges.py  not_accepted_values.py  not_constant.py  not_null_proportion.py  unique.py  unique_combination_of_columns.py
pelage/checks/: accepted_range.py  accepted_values.py  at_least_one.py  column_is_within_n_std.py  custom_check.py  (+14 more)
reference/: PolarsAssertError.html  accepted_range.html  accepted_values.html  at_least_one.html  column_is_within_n_std.html  custom_check.html  has_columns.html  has_dtypes.html  has_mandatory_values.html  has_no_infs.html  has_no_nulls.html  has_shape.html  index.html  is_monotonic.html  maintains_relationships.html  mutually_exclusive_ranges.html  not_accepted_values.html  not_constant.html  not_null_proportion.html  unique.html  unique_combination_of_columns.html
tests/: test_checks.py  test_utils.py
(+44 files in other folders)
