[project]
name = "pelage"
version = "0.4.1"
description = "This package contains a collection of tests to improve your Polars data analysis superpowers"
readme = "README.md"

authors = [
    { name = "Alix Tiran-Cappello", email = "alix.tiran-cappello@laposte.net" },
]
license = { text = "MIT" }

requires-python = ">=3.8, <3.14"
dependencies = ["polars>=0.19"]

[project.urls]
homepage = "https://alixtc.github.io/pelage"
repository = "https://github.com/alixtc/pelage/"
documentation = "https://alixtc.github.io/pelage/notebooks/examples.html"


[dependency-groups]
dev = [
    "tox>=4.23.2",
    "black>=24.2.0",
    "pytest>=8.0.2",
    "isort>=5.13.2",
    "ruff>=0.3.0",
    "pre-commit",
    "coverage>=7.4.3",
    "ipykernel>=6.29.3",
    "quartodoc==0.7.*; python_version >= '3.10'",
    "griffe==1.5.*; python_version >= '3.10'",
    "tox-uv>=1.13.1",
]
extras = [
    "seaborn<1.0.0,>=0.13.2",
    "pyarrow<16.0.0,>=15.0.2",
    "genbadge[all]<2.0.0,>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[ tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "PD"]
